--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,16 +7,8 @@
     tools:context=".view.account.LogInActivity">
 
     <EditText
-        android:theme="@style/myaccountEditText"
+        style="@style/accountEditText"
         android:id="@+id/username"
-        android:layout_width="336dp"
-        android:layout_height="48dp"
-        android:background="@drawable/accountedittext"
-        android:paddingLeft="24dp"
-        android:radius="24dp"
-        android:textSize="16dp"
-        android:textColor="@color/accountText"
-        android:textColorHint="@color/accountTextHint"
         android:hint="Username"
         android:layout_marginTop="240dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,31 +16,19 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
+        style="@style/accountEditText"
         android:id="@+id/password"
-        android:layout_width="336dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/accountedittext"
         android:hint="Password"
-        android:paddingLeft="24dp"
-        android:radius="24dp"
-        android:textSize="16dp"
-
-        android:textColor="@color/accountText"
-        android:textColorHint="@color/accountTextHint"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/username" />
 
     <Button
-        android:id="@+id/loginbutton"
-        android:layout_width="336dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/accountbutton"
-        android:textColor="#FFFFFF"
+        style="@style/accountButton"
         android:text="LogIn"
-        android:textAllCaps="false"
+        android:id="@+id/loginbutton"
+        android:layout_marginBottom="32dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
