--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,20 +10,32 @@
 
     <style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/accountText</item>
-        <item name="colorControlNormal">@color/accountText</item>
-
     </style>
 
-    <style name="myaccountEditText" parent="Widget.AppCompat.EditText">
+    <style name="accountEditText" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">336dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:background">@drawable/accountedittext</item>
-        <item name="android:paddingLeft">24dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:paddingEnd">24dp</item>
+        <item name="android:lines">1</item>
         <item name="android:radius">24dp</item>
         <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/accountText</item>
         <item name="android:textColorHint">@color/accountTextHint</item>
-
     </style>
+
+    <style name="accountButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">336dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">@drawable/accountbutton</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:radius">24dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+
 
 </resources>
