--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/accountText</item>
+        <item name="colorAccent">@color/themeColor</item>
     </style>
 
     <style name="accountEditText" parent="Widget.AppCompat.EditText">
@@ -22,14 +22,14 @@
         <item name="android:lines">1</item>
         <item name="android:radius">24dp</item>
         <item name="android:textSize">16dp</item>
-        <item name="android:textColor">@color/accountText</item>
+        <item name="android:textColor">@color/themeColor</item>
         <item name="android:textColorHint">@color/accountTextHint</item>
     </style>
 
     <style name="accountButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">336dp</item>
         <item name="android:layout_height">48dp</item>
-        <item name="android:background">@drawable/accountbutton</item>
+        <item name="android:background">@drawable/fullradius</item>
         <item name="android:padding">0dp</item>
         <item name="android:radius">24dp</item>
         <item name="android:textColor">#FFFFFF</item>
