--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,27 +9,27 @@
     </style>
 
     <style name="MyAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/themeColor</item>
+        <item name="colorAccent">@color/themeColorBlue</item>
     </style>
 
     <style name="accountEditText" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">320dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">@drawable/accountedittext</item>
+        <item name="android:background">@drawable/accountedtextbg</item>
         <item name="android:padding">0dp</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:paddingEnd">20dp</item>
         <item name="android:lines">1</item>
         <item name="android:radius">20dp</item>
-        <item name="android:textSize">14dp</item>
-        <item name="android:textColor">@color/themeColor</item>
-        <item name="android:textColorHint">@color/accountTextHint</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/themeColorBlue</item>
+        <item name="android:textColorHint">@color/textHintBlue</item>
     </style>
 
     <style name="accountButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">320dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">@drawable/fullradius</item>
+        <item name="android:background">@drawable/fullradiusbg</item>
         <item name="android:padding">0dp</item>
         <item name="android:radius">20dp</item>
         <item name="android:textColor">#FFFFFF</item>
