--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -6,37 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".view.account.LogInActivity">
 
-    <EditText
-        android:id="@+id/username"
-        style="@style/accountEditText"
-        android:layout_marginTop="210dp"
-        android:hint="Username"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/password"
-        style="@style/accountEditText"
-        android:layout_marginTop="16dp"
-        android:hint="Password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/username" />
-
-    <TextView
-        android:id="@+id/toSignUp"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="16dp"
-        android:text="Don't have an account? Sign Up."
-        android:textSize="12sp"
-        android:textColor="@color/themeColorYellow"
-        android:alpha="1"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.4">
+
+        <EditText
+            android:id="@+id/username"
+            style="@style/accountEditText"
+            android:layout_marginTop="0dp"
+            android:hint="Username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/password"
+            style="@style/accountEditText"
+            android:layout_marginTop="16dp"
+            android:hint="Password"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/username" />
+
+        <TextView
+            android:id="@+id/toSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/password"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="16dp"
+            android:text="Don't have an account? Sign Up."
+            android:textSize="12sp"
+            android:textColor="@color/themeColorYellow"
+            android:alpha="1"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <Button
         android:id="@+id/loginButton"
