--- a/app/src/main/res/layout/activity_account_signup.xml
+++ b/app/src/main/res/layout/activity_account_signup.xml
@@ -6,63 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".view.account.SignUpActivity">
 
-    <EditText
-        android:id="@+id/newUsername"
-        style="@style/accountEditText"
-        android:layout_marginTop="120dp"
-        android:hint="Username"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/studentId"
-        style="@style/accountEditText"
-        android:layout_marginTop="16dp"
-        android:hint="StudentId"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newUsername" />
-
-    <EditText
-        android:id="@+id/nickname"
-        style="@style/accountEditText"
-        android:layout_marginTop="16dp"
-        android:hint="Nickname"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/studentId" />
-
-    <EditText
-        android:id="@+id/newPassword"
-        style="@style/accountEditText"
-        android:layout_marginTop="16dp"
-        android:hint="Password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nickname" />
-
-    <EditText
-        android:id="@+id/confirmPassword"
-        style="@style/accountEditText"
-        android:layout_marginTop="16dp"
-        android:hint="ConfirmPassword"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newPassword" />
-
-    <TextView
-        android:id="@+id/toLogIn"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="16dp"
-        android:text="Have an account? Login."
-        android:textSize="12sp"
-        android:textColor="@color/themeColorYellow"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4">
+
+        <EditText
+            android:id="@+id/newUsername"
+            style="@style/accountEditText"
+            android:layout_marginTop="0dp"
+            android:hint="Username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/studentId"
+            style="@style/accountEditText"
+            android:layout_marginTop="16dp"
+            android:hint="StudentId"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newUsername" />
+
+        <EditText
+            android:id="@+id/nickname"
+            style="@style/accountEditText"
+            android:layout_marginTop="16dp"
+            android:hint="Nickname"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/studentId" />
+
+        <EditText
+            android:id="@+id/newPassword"
+            style="@style/accountEditText"
+            android:layout_marginTop="16dp"
+            android:hint="Password"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/nickname" />
+
+        <EditText
+            android:id="@+id/confirmPassword"
+            style="@style/accountEditText"
+            android:layout_marginTop="16dp"
+            android:hint="ConfirmPassword"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/newPassword" />
+
+        <TextView
+            android:id="@+id/toLogIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="16dp"
+            android:text="Have an account? Login."
+            android:textColor="@color/themeColorYellow"
+            android:textSize="12sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/confirmPassword" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/signUpButton"
