--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -22,14 +22,33 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.caverock.androidsvg.SVGImageView
+            style="@style/accountSVGIcon"
+            android:id="@+id/usernameIcon"
+            app:layout_constraintTop_toTopOf="@id/username"
+            app:layout_constraintRight_toRightOf="@id/username"
+            android:src="@drawable/ic_person_black_24dp"
+            />
+
         <EditText
             android:id="@+id/password"
             style="@style/accountEditText"
             android:layout_marginTop="16dp"
             android:hint="Password"
+            android:password="true"
+            android:inputType="textPassword"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/username" />
+
+        <ImageView
+            style="@style/accountSVGIcon"
+            android:id="@+id/passwordIcon"
+            app:layout_constraintTop_toTopOf="@id/password"
+            app:layout_constraintRight_toRightOf="@id/password"
+            android:src="@drawable/ic_md_eye_off"
+            android:alpha="0.4"
+            />
 
         <TextView
             android:id="@+id/toSignUp"
