--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="themeColorBlue">#3683FC</color>
-    <color name="themeColorYellow">#FFB000</color>
+    <color name="themeColorYellow">#FCBB35</color>
     <color name="themeColorPink">#FC6699</color>
     <color name="textHintBlue">#603683FC</color>
     <color name="textHintPink">#60FC6699</color>
