--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -4,77 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.account.LogInActivity">
+    android:background="#FFFFFF"
+    tools:context=".view.activity.account.LoginActivity"
+    >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+        android:src="@drawable/startup"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+        app:layout_constraintBottom_toTopOf="@id/accountCardBg"/>
 
-        <EditText
-            android:id="@+id/username"
-            style="@style/accountEditText"
-            android:layout_marginTop="0dp"
-            android:hint="Username"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/accountCardBg"
+        android:layout_width="match_parent"
+        android:layout_height="384dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <com.caverock.androidsvg.SVGImageView
-            style="@style/accountSVGIcon"
-            android:id="@+id/usernameIcon"
-            app:layout_constraintTop_toTopOf="@id/username"
-            app:layout_constraintRight_toRightOf="@id/username"
-            android:src="@drawable/ic_person_black_24dp"
-            />
-
-        <EditText
-            android:id="@+id/password"
-            style="@style/accountEditText"
-            android:layout_marginTop="16dp"
-            android:hint="Password"
-            android:password="true"
-            android:inputType="textPassword"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/username" />
-
-        <ImageView
-            style="@style/accountSVGIcon"
-            android:id="@+id/passwordIcon"
-            app:layout_constraintTop_toTopOf="@id/password"
-            app:layout_constraintRight_toRightOf="@id/password"
-            android:src="@drawable/ic_md_eye_off"
-            android:alpha="0.4"
-            />
-
-        <TextView
-            android:id="@+id/toSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/password"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="16dp"
-            android:text="Don't have an account? Sign Up."
-            android:textSize="12sp"
-            android:textColor="@color/themeColorYellow"
-            android:alpha="1"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    <include layout="@layout/welcome_login_phone"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </include>
 
     <Button
         android:id="@+id/loginButton"
         style="@style/accountButton"
-        android:layout_marginBottom="20dp"
-        android:text="LogIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="32dp"
+        android:text="登录/注册"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
