--- a/app/src/main/res/layout/coursetable_coursecard.xml
+++ b/app/src/main/res/layout/coursetable_coursecard.xml
@@ -1,136 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<com.lijiankun24.shadowlayout.ShadowLayout
-    android:id="@+id/cardBg"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:shadowDy="1dp"
-    app:shadowRadius="3dp"
-    app:shadowColor="#00000000"
+    android:id="@+id/classCard"
+    android:layout_width="62dp"
+    android:layout_height="128dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
+    android:background="@drawable/coursetable_bg_coursecard">
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    <TextView
+        android:id="@+id/className"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="6dp"
+        android:text="丢孔杰平啊啊"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:textColor="@color/themeColorWrite"
+        android:maxLines="2"
+        android:ellipsize="end"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/classCard"
-        android:layout_width="64dp"
-        android:layout_height="148dp"
-        android:background="@drawable/coursetable_bg_coursecard">
+    <TextView
+        android:id="@+id/classPlace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/className"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="6dp"
+        android:text="丢孔杰平"
+        android:textSize="11sp"
+        android:alpha="0.7"
+        android:textColor="#FFFFFF"
+        android:maxLines="1"/>
 
-        <ImageView
-            android:id="@+id/cardTag"
-            android:layout_width="12dp"
-            android:layout_height="2dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="6dp"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/coursetable_shape_tag"/>
+    <TextView
+        android:id="@+id/teacher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/classPlace"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="6dp"
+        android:text="丢孔杰平"
+        android:textSize="11sp"
+        android:alpha="0.7"
+        android:textColor="@color/themeColorWrite"
+        android:maxLines="1"/>
 
-        <TextView
-            android:id="@+id/className"
-            android:layout_width="52dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/cardTag"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="6dp"
-            android:text="丢孔杰平"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="@color/themeColorBlack"
-            android:maxLines="2"
-            android:ellipsize="end"/>
+    <TextView
+        android:id="@+id/todoTime"
+        android:layout_width="28dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="43dp"
+        android:layout_marginLeft="6dp"
+        android:text="00.00"
+        android:textSize="9sp"
+        android:textStyle="bold"
+        android:textColor="@color/themeColorWrite"
+        android:alpha="0.7"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 
-        <TextView
-            android:id="@+id/classPlace"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/className"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="6dp"
-            android:text="丢孔杰平"
-            android:textSize="10sp"
-            android:alpha="0.6"
-            android:textColor="@color/themeColorBlack"
-            android:maxLines="1"/>
+    <ImageView
+        android:id="@+id/todoTag"
+        android:layout_width="20dp"
+        android:layout_height="1.5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="48dp"
+        android:layout_marginRight="6dp"
+        android:background="@drawable/coursetable_shape_tag"
+        android:alpha="0.7">
+    </ImageView>
 
-        <TextView
-            android:id="@+id/teacher"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/classPlace"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="6dp"
-            android:text="丢孔杰平"
-            android:textSize="10sp"
-            android:alpha="0.6"
-            android:textColor="@color/themeColorBlack"
-            android:maxLines="1"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="6dp">
-
-            <ImageView
-                android:id="@+id/todoBg"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/coursetable_shape_tag"
-                android:alpha="0.1">
-            </ImageView>
-
-            <TextView
-                android:id="@+id/todoTitle"
-                android:layout_width="44dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="4dp"
-                android:layout_marginLeft="4dp"
-                android:text="丢孔杰平"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                android:textColor="@color/themeColorRed"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <TextView
-                android:id="@+id/todoTime"
-                android:layout_width="44dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginBottom="3dp"
-                android:layout_marginLeft="4dp"
-                android:text="11.11"
-                android:textSize="9sp"
-                android:textStyle="bold"
-                android:textColor="@color/themeColorRed"
-                android:alpha="0.4"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+    <TextView
+        android:id="@+id/todoTitle"
+        android:layout_width="52dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/todoTag"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="6dp"
+        android:text="丢孔杰平啊丢你啊"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/themeColorWrite"
+        android:maxLines="2"
+        android:ellipsize="end"/>
 
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-</com.lijiankun24.shadowlayout.ShadowLayout>
