--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="themeColorYellow">#FCBB35</color>
     <color name="themeColorPink">#FC6699</color>
     <color name="themeColorRed">#F4511E</color>
+    <color name="themeColorWrite">#FFFFFF</color>
+    <color name="cardColorBlue">#9CB7DE</color>
+    <color name="cardColorRed">#EBA59B</color>
+    <color name="cardColorGreen">#9FCABC</color>
     <color name="textColor">#002448</color>
     <color name="textInputColor">#99002448</color>
     <color name="textHintColor">#40002448</color>
