--- a/app/src/main/res/layout/fragment_courselist.xml
+++ b/app/src/main/res/layout/fragment_courselist.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/logout"
-        android:text="To Login"
+        android:text="LogOut"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textAllCaps="false"/>
 
