--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -17,7 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tableTitle"
             android:layout_width="match_parent"
-            android:layout_height="112dp">
+            android:layout_height="96dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -50,6 +50,7 @@
 
 
             <com.shg.keyebang.view.view.CircleImageView
+                android:id="@+id/avatar"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
