--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -17,7 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tableTitle"
             android:layout_width="match_parent"
-            android:layout_height="96dp">
+            android:layout_height="104dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -28,14 +28,55 @@
                 android:orientation="vertical">
 
                 <TextView
-                    style="@style/mainMiniTitle"
+                    style="@style/miniMainTitle"
                     android:id="@+id/courseTableTitle"
                     android:text="Title"/>
 
-                <TextView
-                    style="@style/subTitle"
-                    android:id="@+id/courseTableTime"
-                    android:text="Time"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp">
+
+                    <ImageView
+                        android:id="@+id/timeBg"
+                        android:layout_width="92dp"
+                        android:layout_height="22dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:background="@drawable/common_bg_roundlayout_black"/>
+
+                    <ImageView
+                        android:id="@+id/timeIcon"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginLeft="6dp"
+                        android:src="@drawable/ic_timer_black_24dp"
+                        android:alpha="0.6"/>
+
+                    <TextView
+                        style="@style/miniSubTitle"
+                        android:id="@+id/semesterTime"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/timeIcon"
+                        app:layout_constraintRight_toRightOf="@id/timeBg"
+                        android:layout_marginRight="4dp"
+                        android:text="semesterTime"/>
+
+                    <TextView
+                        style="@style/miniSubTitle"
+                        android:id="@+id/date"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/timeBg"
+                        android:layout_marginLeft="4dp"
+                        android:text="Time"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -61,8 +102,6 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tableContainer"
