--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -14,10 +14,15 @@
         android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="16dp"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tableTitle"
             android:layout_width="match_parent"
-            android:layout_height="104dp">
+            android:layout_height="80dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -28,14 +33,14 @@
                 android:orientation="vertical">
 
                 <TextView
-                    style="@style/miniMainTitle"
+                    style="@style/mainTitle"
                     android:id="@+id/courseTableTitle"
                     android:text="Title"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp">
+                    android:layout_marginTop="2dp">
 
                     <ImageView
                         android:id="@+id/timeBg"
@@ -44,7 +49,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        android:background="@drawable/common_bg_roundlayout_black"/>
+                        android:background="@drawable/bg_capsule_black_alpha"/>
 
                     <ImageView
                         android:id="@+id/timeIcon"
@@ -86,18 +91,19 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@drawable/common_bg_roundrectangle"
-                android:alpha="0.05"/>
+                android:layout_marginRight="3dp"
+                android:background="@drawable/bg_capsule_black"
+                android:alpha="0.04"/>
 
 
-            <com.shg.keyebang.view.view.CircleImageView
+            <com.shg.keyebang.view.general.CircleImageView
                 android:id="@+id/avatar"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="8dp"
+                android:layout_marginRight="11dp"
                 android:src="@drawable/deer"/>
 
 
