--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,7 @@
     <style name="accountButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">280dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">@drawable/common_bg_button</item>
+        <item name="android:background">@drawable/bg_capsule_blue</item>
         <item name="android:padding">0dp</item>
         <item name="android:radius">20dp</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -65,18 +65,10 @@
         <item name="android:textColor">@color/themeColorBlack</item>
     </style>
 
-    <style name="miniMainTitle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/themeColorBlack</item>
-    </style>
-
     <style name="subTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/themeColorBlack</item>
         <item name="android:alpha">0.5</item>
@@ -89,6 +81,11 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/themeColorBlack</item>
         <item name="android:alpha">0.5</item>
+    </style>
+
+    <style name="indicator" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
