--- a/app/src/main/res/drawable/courselist_indicator.xml
+++ b/app/src/main/res/drawable/courselist_indicator.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:gravity="start"
-        android:left="15dp"
+        android:gravity="center_horizontal"
         >
         <shape>
             <corners android:radius="4dp" />
