--- a/app/src/main/res/drawable/bg_layout_up.xml
+++ b/app/src/main/res/drawable/bg_layout_up.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/themeColorWhite"/>
     <corners
-        android:radius="24dp"
-        android:topLeftRadius="24dp"
-        android:topRightRadius="24dp"
+        android:radius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp">
     </corners>
