--- a/app/src/main/res/layout/activity_account_signup.xml
+++ b/app/src/main/res/layout/activity_account_signup.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bg_roundlayout_white">
+    android:background="@drawable/bg_layout_up">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="296dp"
